--- a/assets/css/journey.css
+++ b/assets/css/journey.css
@@ -40,6 +40,7 @@ span{
 .grid-story{
     font-size: 1.6rem;
     width: 20rem;
+    margin-bottom: 1rem;
 }
 img{border-radius: 4px;}
 .electrician{
@@ -136,8 +137,6 @@ img{border-radius: 4px;}
             border-radius: 50%;
         }
     }
-}
-@media only screen and (min-width:601px) and (max-width: 820px){
     .journey-container{
         background-color: transparent;
     }
@@ -169,6 +168,7 @@ img{border-radius: 4px;}
     .grid-story{
         font-size: 1.3rem;
         width: 15rem;
+        margin-bottom: 0.5rem;
     }
     .grid-texts {
         width: 25rem;
@@ -198,7 +198,7 @@ img{border-radius: 4px;}
         border: none;
     }
 }
-@media only screen and (min-width:821px) and (max-width:1200px){
+@media only screen and (min-width:801px) and (max-width:1200px){
     .grid-container{
         column-gap: 1rem;
     }
@@ -208,6 +208,9 @@ img{border-radius: 4px;}
     .grid-texts{
         width: 23rem;
         margin-right: 1rem;
+    }
+    .grid-story{
+        margin-bottom: 1rem;
     }
     .electrician{
         width: 15rem;
