--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -31,12 +31,12 @@ header:hover{
     font-weight: 900;
 }
 .full-name img{
-    width: 8rem;
-    height: 8rem;
+    width: 7rem;
+    height: 7rem;
     border-radius: 50%;
     position: absolute;
-    top: 1rem;
-    right: 2rem;
+    top: 0.3rem;
+    right: 3rem;
     
 }
 .name{
@@ -86,13 +86,22 @@ header:hover{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-left: 3.3rem;
+}
+h3{
+    font-size: 1rem;
 }
 .journey-d, .about-me-d{
     display: none;
 }
+.journey-m{
+    margin: 0 ;
+}
+.about-me-m{
+    margin: 0 4rem 0 4rem;
+}
 .journey-m, .about-me-m{
-    margin: 0 3rem;
-    width: 8rem;
+    width: 5rem;
     border: 5px black solid;
 }
 .mirror-journey{
@@ -161,6 +170,9 @@ header:hover{
     .other-pages{
         margin-bottom: 1rem;
     }
+    h3{
+        font-size: 1.6rem;
+    }
 }
 @media only screen and (min-width:700px) and (max-width:1200px){
     .full-name h1{
@@ -202,16 +214,7 @@ header:hover{
     }
 }
 @media only screen and (min-width:1201px){
-    .journey-d,.about-me-d{
-        display: initial;
-        margin: 0rem 5.5rem;
-        width: 20rem;
-        height: 25rem;
-        border: 5px black solid;
-    }
-    .other-pages{
-        margin-bottom: 1rem;
-    }
+
     .full-name{
         padding-top: 3rem;
         margin: 2rem 0 2rem 1rem;
@@ -251,6 +254,19 @@ header:hover{
     }
     .lastname-container{
         margin-left: 30rem;
+    }
+    .journey-d,.about-me-d{
+        display: initial;
+        margin: 0rem 5.5rem;
+        width: 20rem;
+        height: 25rem;
+        border: 5px black solid;
+    }
+    .other-pages{
+        margin-bottom: 1rem;
+    }
+    h3{
+        font-size: 2rem;
     }
     .skills{
         justify-content: space-around;
