--- a/assets/css/about-me.css
+++ b/assets/css/about-me.css
@@ -1,6 +1,6 @@
 body{
     background-size: 10rem;
-    background-image: url(/assets/images/about-me-bg.jpg);
+    background-image: url(../images/about-me-bg.jpg);
 }
 main{
     display: flex;
@@ -163,7 +163,7 @@ button a:hover{
 
     }
 }    
-@media only screen and (min-width:600px) and (max-width:999px){
+@media only screen and (min-width:600px) and (max-width:1200px){
     h1{
         font-size: 1rem;
         margin-top: 3rem;
@@ -197,7 +197,7 @@ button a:hover{
         font-size: 1rem;
     }
 }
-@media only screen and (min-width:1000px){
+@media only screen and (min-width:1201px){
     h1{
         font-size: 1.5rem;
     }
@@ -215,11 +215,12 @@ button a:hover{
     }
     .bio-text{
         font-size: 1.4rem;
-        margin-left: 3rem;
-        margin-right: 3rem;
+        margin-left: 15rem;
+        margin-right: 10rem;
     }
     .my-photo{
-        width: 20rem;
+        width: 25rem;
+        margin-left: 5rem;
     }
     li{
         font-size: 3rem;
