--- a/assets/css/journey.css
+++ b/assets/css/journey.css
@@ -11,7 +11,6 @@ main{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-image: url(../iamges/pattern-code.jpg);
 }
 .top-left-corner, .bottom-right-corner{
     width: 3rem;
@@ -106,7 +105,7 @@ img{border-radius: 4px;}
     border-radius: 4px;
     width:34rem;
     height: 37rem;
-    background-image: url(/assets/images/html-css.jpg);
+    background-image: url(../images/html-css.jpg);
     background-size: 35rem;
     background-position-x: -1rem;
 }
