--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -52,6 +52,7 @@ header a:active{
         padding: 5px;
         width: 2rem;
         margin: 0.3rem;
+        box-shadow: 1px 0 15px gray;
     }
     header{
         width: 12rem;
