--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -31,15 +31,13 @@ header:hover{
     font-weight: 900;
 }
 .full-name img{
-    width: 7rem;
-    height: 7rem;
+    width: 6rem;
+    height: 6rem;
     border-radius: 50%;
     position: absolute;
-    top: 0.3rem;
-    right: 2.7rem;
+    top: 0.8rem;
+    right: 1rem;
     box-shadow: 1px 0 50px rgb(124, 123, 123);
-
-    
 }
 .name{
     background-image: url(../images/italia.jpg);
@@ -92,7 +90,7 @@ header:hover{
 }
 .kinder, h3, .bg-mention{
     padding: 0.2rem 0.5rem;
-    border-radius: 30%;
+    border-radius:20%;
     box-shadow: 1px 0 15px rgb(53, 52, 52);
     background-color: black;
 }
@@ -112,12 +110,13 @@ h3{
     width: 5rem;
     border: 5px black solid;
     box-shadow: 1px 0 30px rgb(66, 65, 65);
+    border-radius: 10%;
 }
 .mirror-journey{
-    transform: rotate(30deg) translate(-2rem,1rem);
+    transform: translate(-2rem,0.1rem);
 }
 .mirror-about-me{
-    transform: rotate(-30deg) translate(2rem,1rem);
+    transform:translate(2rem,1rem);
 }
 .mirror-journey h3{
     display: flex;
@@ -133,12 +132,10 @@ h3{
     display: flex;
     justify-content: space-between;
     color: rgb(255, 255, 254);
-    font-size: 0.8rem;
+    font-size: 0.5rem;
     font-weight: 700;
     font-family: "Chakra Petch";
-    margin-bottom: 2.5rem;
-    margin-left: 0.5rem;
-    margin-right: 0.2rem;
+    margin: 1rem 1rem 4rem 0.5rem;
 }
 .soft-skills, .hard-skills{
     background-color: rgb(41, 39, 39);
@@ -158,7 +155,7 @@ h3{
  position: absolute;
  bottom: 1.8rem;
  left: 4.3rem;
- font-size: 0.7rem;
+ font-size: 0.4rem;
  color: white;
 }
 .bg-mention a{
@@ -179,18 +176,18 @@ h3{
         display: none;
     }
     .mirror-journey{
-        transform: rotate(30deg) translate(-3.5rem,1rem);
+        transform:translate(-3.5rem,1rem);
     }
     .mirror-about-me{
-        transform: rotate(-30deg) translate(3.5rem,1rem);
+        transform: translate(3.5rem,1rem);
     }
     .journey-d,.about-me-d{
         display: initial;
-        width: 14rem;
-        height: 15rem;
+        width: 18rem;
+        height: 20rem;
     }
     .other-pages{
-        margin-bottom: 1rem;
+        margin-bottom: 2rem;
     }
     h3{
         font-size: 1.6rem;
@@ -272,8 +269,8 @@ h3{
         width: 35rem;
     }
     .kinder{
-        font-size: 4rem;
-        margin-top: 0;
+        font-size: 3rem;
+        margin:1.5rem;
     }
     .name-container{
         margin-right: 30rem;
@@ -283,8 +280,8 @@ h3{
     }
     .journey-d,.about-me-d{
         display: initial;
-        width: 13rem;
-        height: 13rem;
+        width: 30rem;
+        height: 30rem;
         border: 5px black solid;
     }
     .other-pages{
