--- a/assets/css/about-me.css
+++ b/assets/css/about-me.css
@@ -25,6 +25,7 @@ h1{
     padding: 0.1rem;
     border-radius: 4px;
     margin-top: 3rem;
+    box-shadow: 5px 10px 15px ;
 }
 .biography{
     display: flex;
@@ -42,6 +43,7 @@ h1{
     margin-right: 1rem;
     border-radius: 10px;
     border: 1px gray solid;
+    box-shadow: 5px 10px 15px ;
 
 }
 .my-photo{
@@ -49,6 +51,7 @@ h1{
     border-radius: 15px;
     margin-right: 1rem;
     margin-left: 0.2rem;
+    box-shadow: 5px 10px 15px ;
 }
 .bg-mention{
     font-size: 0.6rem;
@@ -68,6 +71,7 @@ h1{
     padding: 0.1rem;
     border-radius: 4px;
     margin-bottom: 0.1rem;
+    box-shadow: 5px 10px 15px ;
 }
 .title-like-container{
     display: flex;
