--- a/assets/css/contact-form.css
+++ b/assets/css/contact-form.css
@@ -14,7 +14,7 @@ main{
 h1{
     background-color: white;
     border-radius: 10%;
-    box-shadow: 1px 0 15px gray;
+    box-shadow: 5px 5px 10px black;
     padding: 0.2rem;
     text-decoration: underline;
 }
@@ -29,9 +29,9 @@ form{
     flex-direction: column;
     align-items: center;
     background-color: white;
-    padding: 1rem;
+    padding: 0.2rem;
     border-radius: 10%;
-    box-shadow: 1px 0 15px gray;
+    box-shadow: 5px 5px 10px black;
 }
 .name,.email,.message{
     display: flex;
@@ -49,7 +49,7 @@ input, textarea{
     background-color: rgb(236, 227, 227);
     border-radius: 5%;
     padding: 0.8rem;
-    box-shadow: 1px 0 15px gray;
+    box-shadow: 5px 5px 10px black;
 }
 .send-button{
     font-family: "Chakra Petch", sans-serif;
@@ -60,6 +60,7 @@ input, textarea{
     margin-top: 2rem;
     border-radius: 15%;
     cursor: pointer;
+    box-shadow: 5px 10px 15px ;
 }
 .send-button:hover{
     opacity: 0.8;
@@ -80,7 +81,7 @@ input, textarea{
     margin: 4rem;
     padding: 0.1rem;
     border-radius: 5%;
-    box-shadow: 1px 0 15px gray;
+    box-shadow: 5px 5px 10px black;
 }
 .vanish{
     display: none;
