--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -7,7 +7,7 @@ footer{
     z-index: 1001;
     background-color: white;
     bottom: 0; left: 0; right: 0;
-    box-shadow: 1px 0 15px gray;
+    box-shadow: 2px -2px 10px black;
 }
 .form-button, .back-home{
     text-decoration: underline;
