--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -5,7 +5,7 @@ header{
     right: 0;
     left: 0;
     z-index: 1000;
-    box-shadow: 1px 0 15px gray;
+    box-shadow: 5px 5px 10px black;
 }
 .hamburger{
     display: none;
@@ -52,7 +52,7 @@ header a:active{
         padding: 5px;
         width: 2rem;
         margin: 0.3rem;
-        box-shadow: 1px 0 15px gray;
+        box-shadow: 5px 5px 10px black;
     }
     header{
         width: 12rem;
@@ -74,7 +74,7 @@ header a:active{
         width: 8rem;
         justify-content: space-around;
         align-items: center;
-        box-shadow: 1px 0 15px gray;
+        box-shadow: 5px 5px 10px black;
         border-top-left-radius: 0;
         .hamburger{
             display: none;
